8.4.0/components/modal-outside-button.mdx
---
description: Компонент для отрисовки кнопок в правом верхнем углу в compact-версии ModalPage и ModalCard.
tags: buttons
---

<Overview group="modals">

# ModalOutsideButton [tag:component]

Компонент для отрисовки кнопок в правом верхнем углу в `compact`-версии `ModalPage` и `ModalCard`.
Внутрь компонента желательно передавать иконки размером `20px`,
все стили будут автоматически применены в соответствии с дизайн-системой.

Кнопка передается в свойство `outsideButtons` в `ModalPage` и `ModalCard`,
при необходимости передать несколько кнопок одновременно — используйте `React.Fragment`.

</Overview>

import { BlockWrapper } from '@/components/wrappers';

{/* @example-description: Набор внешних кнопок `ModalOutsideButton` для правого верхнего угла модального окна. */}
<Playground>
  ```jsx
  <Flex direction="column" gap="m">
    <ModalOutsideButton aria-label="Больше" onClick={() => {}}>
      <Icon20More />
    </ModalOutsideButton>
    <ModalOutsideButton aria-label="Нравится" onClick={() => {}}>
      <Icon20Like />
    </ModalOutsideButton>
  </Flex>
  ```
</Playground>

## Доступность (a11y)

Чтобы кнопка была доступной для ассистивных технологий, нужно передать в нее скрытый визуально текст
через стандартное свойство `aria-label`, который сможет прочитать скринридер.

```jsx
<ModalOutsideButton aria-label="Больше" onClick={() => {}}>
  <Icon20More />
</ModalOutsideButton>
```

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `activated` | `boolean` | `-` | Позволяет управлять `activated`-состоянием извне. |
| `activeClassName` | `string` | `-` | **Deprecated**: Since 7.3.0. Будет удалено в **VKUI v9**.  Используйте свойство `activeMode`. |
| `activeEffectDelay` | `number` | `-` | Длительность показа `active`-состояния. |
| `activeMode` | `StateModeLiteral` | `-` | Стиль подсветки active-состояния. Если передать произвольную строку, она добавится как css-класс во время active. |
| `aria-label` | `string` | `-` | Текст для скринридера. |
| `borderRadiusMode` | `"auto" \| "inherit"` | `-` | Задает border-radius элементу В режиме `auto` на маленьких экранах `border-radius: 0`, иначе определяется токеном `--vkui--size_border_radius--regular`. |
| `**children** \*` | `ReactNode` | `-` | Рекомендуется использовать иконки размером `20px`. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `-` |  |
| `focusVisibleMode` | `FocusVisibleMode` | `-` | Стиль аутлайна focus visible. Если передать произвольную строку, она добавится как css-класс при :focus-visible |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `hasActive` | `boolean` | `-` | Указывает, должен ли компонент реагировать на `active`-состояние. |
| `hasHover` | `boolean` | `-` | Указывает, должен ли компонент реагировать на `hover`-состояние. |
| `hasHoverWithChildren` | `boolean` | `-` | Позволяет родительскому компоненту иметь `hovered`-cостояние при наведении на любой дочерний элемент. По умолчанию состояние hovered у родителя сбрасывается.  Присваивается родителькому компоненту. |
| `hoverClassName` | `string` | `-` | **Deprecated**: Since 7.3.0. Будет удалено в **VKUI v9**.  Используйте свойство `hoverMode`. |
| `hovered` | `boolean` | `-` | Позволяет управлять `hovered`-состоянием извне. |
| `hoverMode` | `StateModeLiteral` | `-` | Стиль подсветки hover-состояния. Если передать произвольную строку, она добавится как css-класс во время hover. |
| `render` | `((props: AllHTMLAttributes<HTMLElement> & HasRootRef<HTMLElement>) => ReactNode)` | `-` | Позволяет переопределить рендер компонента, получая собранные свойства (включая вычисленные `className` и `style`). Используется вместо `Component`.  Позволяет гибко объединять несколько компонентов без создания промежуточных DOM-узлов и без ремаунта поддерева на каждый рендер. |
| `unlockParentHover` | `boolean` | `-` | Позволяет родительскому компоненту показывать hovered-состояние при наведении на текущий дочерний компонент.  Присваивается дочернему компоненту. |

